# b-spline-two-e

./: .gitignore  CMakeLists.txt  README.md
examples/: RKH_input.in  basis_input.in  diag_input.in  eval_input.in  quasi_input.in  time_prop.in
src/RKH_frame/: CMakeLists.txt  RKH_hamiltonian.f90  adiabatic_potentials.f90
src/apps/: main_RKH.f90  main_basis_setup.f90  main_diagonalization.f90  main_eval_rad.f90  main_quasienergies.f90  main_time_prop.f90
src/diagonalization/: CMakeLists.txt  diagonalization.f90
src/function_eval/: CMakeLists.txt  function_eval.f90
src/mat_els/: CMakeLists.txt  dipole.f90  hamiltonian.f90  mat_els.f90  orbitals.f90  potentials.f90
src/quasienergies/: CMakeLists.txt  essential_states.f90  quasi_calcs.f90  quasi_circ.f90  quasi_floquet.f90  static.f90
src/time_dep/: CMakeLists.txt  fields.f90  propagator_CN.f90  time_propagation.f90
src/tools/: CAP_tools.f90  CMakeLists.txt  GMRES_tools.f90  ILU0_tools.f90  Jacobi_tools.f90  PARDISO_tools.f90  block_tools.f90  bspline_tools.f90  constants_tools.f90  dir_tools.f90  eig_tools.f90  grid_tools.f90  input_tools.f90  kind_tools.f90  orbital_tools.f90  precond_tools.f90  quad_tools.f90  sparse_array_tools.f90  wigner_tools.f90
tests/: plot_H.py  test_S_eig.py  test_basis.f90  test_bplines.f90  test_comp_line.txt  test_dir.f90  test_fields.f90  test_gsl_3j.f90  test_mat_els.f90  test_quad.f90  test_sparse_mv.f90
utils/: install_bs2e_aws_linux_2023.sh  plot_H_eff_TDSE.py  plot_energies.py  plot_utils.py
